DONE IT BITCHES

--- a/pages/game.html
+++ b/pages/game.html
@@ -19,7 +19,7 @@
 
 
 
-  <div class="container">
+  <div class="container" style="width: 850">
     <div class="jumbotron">
       <h1> Star Wars TIE Edition</h1>
       <p>Take your TIE Fighter and fly in to space!</p>
@@ -27,7 +27,7 @@
     <div class="row">
 
       <div class="col-md-4">
-        
+
       </div>
 
     </div>
